<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonAction"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_action"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonActionComedy"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonAction"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_action_comedy"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonAdventure"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonActionComedy"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_adventure"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonAnimation"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonAdventure"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_animation"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonBiography"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonAnimation"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_biographical"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonComedy"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonBiography"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_comedy"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonCrime"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonComedy"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_crime"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonDrama"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonCrime"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_drama"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonFamily"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonDrama"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_family"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonFantasy"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonFamily"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_fantasy"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonHistory"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonFantasy"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_history"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonHorror"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonHistory"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_horror"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonMysteryThriller"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buttonHorror"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg_l"
                android:gravity="center"
                android:text="@string/GenreActivity_mystery_thriller"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonRomanceComedy"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/buttonMysteryThriller"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/GenreActivity_romance_comedy"
                android:textColor="@drawable/buttontextcolor"
                android:textSize="19sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>