<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="redhill.myapplication.MainActivity"
    android:layout_gravity="center"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="66dp"
                android:id="@+id/logo"
                android:background="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription=""
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:text="@string/MainActivity_prime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#d9d9d9"
                android:textSize="23sp"
                android:id="@+id/textView2"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:text="@string/MainActivity_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#d9d9d9"
                android:textSize="17sp"
                android:id="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTitle"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"/>

            <view
                class="com.google.android.youtube.player.YouTubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView1"
                android:background="#00000000"
                android:layout_marginTop="20dp"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:gravity="center"/>

            <CheckBox
                android:text="@string/MainActivity_checkBox"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/imageView"
                android:id="@+id/checkBox"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <CheckBox
                android:text="@string/MainActivity_checkBoxFav"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="10dp"
                android:id="@+id/checkBoxFav"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:text="@string/MainActivity_buttonTrailer"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:textSize="19sp"
                android:background="@drawable/buttonbg"
                android:textColor="@drawable/buttontextcolor"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/checkBox"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="20dp"
                android:id="@+id/button2"
                android:layout_gravity="center"
                android:gravity="center"/>

            <Button
                android:text="@string/MainActivity_buttonRefresh"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:textSize="19sp"
                android:background="@drawable/buttonbg_l"
                android:textColor="@drawable/buttontextcolor"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/checkBox"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="20dp"
                android:id="@+id/button_refresh"
                android:layout_gravity="center"
                android:gravity="center"/>

        </RelativeLayout>

    </ScrollView>

    <!--
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5215375185046126~7852897896">
    </com.google.android.gms.ads.AdView>
    -->

</RelativeLayout>
